[package]
name = "horizontal_mixer"
version = "0.1.0"
edition = "2021"
description = "horizontal mixer in Rust using Kira for audio playback"
license = "MIT"
authors = ["TheBlueRuby"]
repository = "https://github.com/TheBlueRuby/rust_horizontal_mixer"
keywords = ["gamedev", "audio", "music"]
categories = ["game-development", "multimedia::audio"]
readme = "./readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kira = "0.8.5"

[package.metadata.docs.rs]
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]