[package]
name = "horizontal_mixer"
version = "0.1.3"
edition = "2021"

description = "horizontal mixer in Rust using Kira for audio playback"
license = "MIT"
authors = ["TheBlueRuby"]
repository = "https://github.com/TheBlueRuby/rust_horizontal_mixer"

keywords = ["gamedev", "audio", "music"]
categories = ["game-development", "multimedia::audio"]

readme = "./readme.md"
exclude = ["test_resources/*", "tests/*", "target/*"]


[dependencies]
kira = "0.8.5"


[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]